[package]
name = "pstoned"
version = "0.1.0"
authors = ["Idria Software <info@idria.com.ar>"]
edition = "2021"
license = "GNU Affero General Public License"
homepage = "https://github.com/tkenda/pstone"
repository = "https://github.com/tkenda/pstone.git"
keywords = ["dicom", "stone", "orthanc"]
description = "Orthanc's Stone DICOM Web Viewer integration."
readme = "README.md"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "pstoned.exe"
LegalCopyright = "Copyright © 2022"
FileDescription = "Stone Web Viewer integration"
ProductName = "PStone"
ProductVersion = "0.1.0"

[dependencies]
axum = { vesion = "0.5.4", features = ["headers"] } 
axum-server = { version = "0.4", features = ["tls-rustls"] }
tokio = { version = "1.18", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0.79"
async-trait = "0.1.53"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"